--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/node": "^22.9.1"
 	}
 }
